objects/smagicinteract__Converse_Desk_Recently_Used_Filters__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__Filter_ID__c</fullName>
        <label>Filter ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Filter_Object__c</fullName>
        <label>Filter Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Converse_Desk_Recently_Used_Filters</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Converse Desk Recently Used Filters</label>
    <listViews>
        <fullName>Nolan_Daigle_Converse_Desk_Recently_Used_Filters</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Converse Desk Recently Used Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>